<resources>
    <string name="app_name">Here4You</string>
    <string name="Email">Email</string>
    <string name="name">Tuo Nome</string>
    <string name="cognome">Tuo Cognome</string>
    <string name="Password">Inserire Password</string>
    <string name="RecuperaPassword">Recupera Password</string>
    <string name="Login">Login</string>
    <string name="Registrati">Registrazione medico</string>
    <string name="Registrati1">Registrazione cittadino</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="prova">Prova </string>
    <string name="ordineMedici">N° Ordine Dei Medici </string>
    <string name="configPssword">Conferma Password </string>
    <string name="checkbox">sei un medico</string>
    <string name="title_activity_home_c">HomeActivityC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="campo_array">
        <item>PSICOLOGIA DEL LAVORO</item>
        <item>PSICOLOGIA DEL CONSUMATORE</item>
        <item>PSICOLOGIA DEL CLINICA</item>
        <item>SESSUOLOGIA</item>
        <item>NEUROPSICOLOGIA</item>
        <item>PSICOLOGIA FORENSE</item>
        <item>PSICOLOGIA DELLO SVILUPPO</item>
        <item>PSICOLOGIA DELLO SPORT</item>
        <item>PSICOLOGIA SOCIALE</item>
        <item>PSICOLOGIA DI COMUNITA</item>
        <item>PSICOLOGIA DI COPPIA</item>
        <item>PSICOLOGIA SPERIMENTALE</item>
    </string-array>
</resources>